--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -1,11 +1,38 @@
 <p>Titre = {{ titre }}</p>
 
-<div *ngFor="let assignment of assignments"[ngClass]="{'rendu':assignment.rendu, 'nonRendu': !assignment.rendu}">
-  <p *ngIf="assignment.rendu ; else nonsoumis">
+
+
+<form ngForm (submit)="onSubmit(); assignmentForm.reset()" #assignmentForm class="form"> 
+  <mat-form-field>
+    <input matInput [(ngModel)]="nomDevoir" name="nom"
+    placeholder="Nom du devoir" required>
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <input matInput [matDatepicker]="picker"
+    placeholder="Date de rendu"
+    [(ngModel)]="dateRendu" name="date" required>
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+  <p>{{nomDevoir}}</p>
+  <button mat-stroked-button color="primary" >
+    Ajouter un devoir
+  </button>
+  
+</form>
+<div *ngFor="let assignment of assignments">
+  <p appRendu *ngIf="assignment.rendu ; else nonsoumis">
     
     Devoir intitulé {{ assignment.nom }}, rendu le {{ assignment.dateRendu }}.
   </p>
   <ng-template #nonsoumis >
     Le devoir {{assignment.nom}} n'a pas été rendu.
 </ng-template>
+<mat-divider></mat-divider>
+<mat-list-item (click)="assignmentClique(assignment)"> </mat-list-item>
+<h3 mat-subheader>{{assignment.dateRendu | date}}</h3>
+
 </div>
+
+<app-assignment-detail [assignementTransmis]="assignementSelectionne"></app-assignment-detail>
+<p *ngIf="assignementTransmis">{{assignementTransmis.nom}}</p>
