--- a/src/app/assignments/assignments.component.css
+++ b/src/app/assignments/assignments.component.css
@@ -1,5 +1,8 @@
-.form {
-    display: flex;
-    flex-direction: column;
-    margin: 5px;
+.container {
+  display:flex;
+  flex-direction: column;
 }
+.AjouterBtn {
+  align-self: flex-end;
+}
+  
