--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -1,38 +1,39 @@
-<p>Titre = {{ titre }}</p>
 
 
+<app-add-assignment
+  *ngIf="formVisible"
+  (nouvelAssignment)="onNouvelAssignment($event)"
+>
+</app-add-assignment>
 
-<form ngForm (submit)="onSubmit(); assignmentForm.reset()" #assignmentForm class="form"> 
-  <mat-form-field>
-    <input matInput [(ngModel)]="nomDevoir" name="nom"
-    placeholder="Nom du devoir" required>
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <input matInput [matDatepicker]="picker"
-    placeholder="Date de rendu"
-    [(ngModel)]="dateRendu" name="date" required>
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
-  <p>{{nomDevoir}}</p>
-  <button mat-stroked-button color="primary" >
-    Ajouter un devoir
+<main *ngIf="!formVisible" class="container">
+  <button
+    mat-flat-button
+    color="accent"
+    (click)="onAddAssignmentBtnClick()"
+    class="AjouterBtn"
+  >
+    Ajouter Assignment
   </button>
-  
-</form>
-<div *ngFor="let assignment of assignments">
-  <p appRendu *ngIf="assignment.rendu ; else nonsoumis">
-    
-    Devoir intitulé {{ assignment.nom }}, rendu le {{ assignment.dateRendu }}.
-  </p>
-  <ng-template #nonsoumis >
-    Le devoir {{assignment.nom}} n'a pas été rendu.
-</ng-template>
-<mat-divider></mat-divider>
-<mat-list-item (click)="assignmentClique(assignment)"> </mat-list-item>
-<h3 mat-subheader>{{assignment.dateRendu | date}}</h3>
+  <h1>Liste des devoirs à rendre (assignments) :</h1>
+  <mat-list *ngFor="let a of assignments">
+    <h3 mat-subheader>{{ a.dateDeRendu | date }}</h3>
+    <mat-list-item (click)="onAssignmentClicke(a)">
+      <p *ngIf="a.rendu; else nonsoumis">
+        {{ a.nom }}
+        rendu : {{ a.rendu }}.
+      </p>
+      <ng-template #nonsoumis>
+        <p>
+          {{ a.nom }}, n'a pas été rendu à temps (date :
+          {{ a.dateDeRendu | date }})
+        </p>
+      </ng-template>
+      <mat-divider></mat-divider>
+    </mat-list-item>
+  </mat-list>
 
-</div>
-
-<app-assignment-detail [assignementTransmis]="assignementSelectionne"></app-assignment-detail>
-<p *ngIf="assignementTransmis">{{assignementTransmis.nom}}</p>
+  <app-assignments-details
+    [assignmentTransmis]="assignmentSelectionne"
+  ></app-assignments-details>
+</main>
