--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,16 @@
 .example-spacer {
     flex: 1 1 auto;
   }
+
+  mat-sidenav-container {
+    height: calc(205vh - 115vh);
+  }
+
+mat-sidenav{
+  width: 200px;
+  background-color: aqua;
+}
+p {
+  margin:0
+}
+
