--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,30 @@
 <p>
     <mat-toolbar color="primary">
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <button mat-icon-button (click)="opened=!opened" class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>menu</mat-icon>
       </button>
-      <span>My App</span>
+      <span>Mes devoirs</span>
       <span class="example-spacer"></span>
       <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
+        <mat-icon>face</mat-icon>
       </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <mat-icon>share</mat-icon>
+      
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" routerLink="/home">
+        <mat-icon>home</mat-icon>
       </button>
     </mat-toolbar>
   </p>
-  
-<h1>Interface graphique du composant père AppComponent</h1>
-<h2>Ci-dessous l'interface graphique du composant fils :</h2>
-<app-assignments></app-assignments>
+<mat-sidenav-container>
+  <mat-sidenav [(opened)]="opened" mode="side">
+    <mat-nav-list>
+      <a mat-list-item href="#">Liste des devoirs</a>
+      <a mat-list-item href="#">Ajout d'un devoir</a>
+      <a mat-list-item href="#">Modification d'un devoir</a>
+      <a mat-list-item href="#">Suppression d'un devoir</a>
+      <a mat-list-item href="#">Génération de données de test</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
