--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,9 @@
 .example-spacer {
     flex: 1 1 auto;
   }
-
+.second-spacer {
+    flex: 0.25 1 auto;
+  }
   mat-sidenav-container {
     height: calc(205vh - 115vh);
   }
