--- a/src/app/assignments/authentification/authentification.component.html
+++ b/src/app/assignments/authentification/authentification.component.html
@@ -5,7 +5,7 @@
     </mat-form-field>
     <mat-form-field>
         <mat-label>Mot de passe</mat-label>
-        <input password matInput [(ngModel)]="mdp" placeholder="Pseudo">
+        <input type="password" matInput [(ngModel)]="mdp" placeholder="Pseudo">
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="onClickAuth()">Connection</button>
 </p>
