--- a/assignment-app/src/app/assignments/assignments.component.html
+++ b/assignment-app/src/app/assignments/assignments.component.html
@@ -17,8 +17,8 @@
 </div>
   <h1>Liste des devoirs à rendre :</h1>
   <mat-list *ngFor="let a of assignments">
-    <nav><a routerLink="/assignment/{{a._id}}">
-    <mat-list-item (click)="onAssignmentClicke(a)">
+    <nav><a [routerLink]="['/assignment',a._id]">
+    <mat-list-item>
       
       <p *ngIf="a.rendu; else nonsoumis" class="rendu">
         Le devoir :
