--- a/assignment-app/src/app/assignments/authentification/authentification.component.html
+++ b/assignment-app/src/app/assignments/authentification/authentification.component.html
@@ -7,5 +7,5 @@
         <mat-label>Mot de passe</mat-label>
         <input type="password" matInput [(ngModel)]="mdp" placeholder="Pseudo">
     </mat-form-field>
-    <button mat-raised-button color="primary" (click)="onClickAuth()">Connection</button>
+    <button mat-raised-button color="primary" (click)="onClickAuth()">ConneXion</button>
 </p>
