--- a/assignment-app/src/app/app.component.html
+++ b/assignment-app/src/app/app.component.html
@@ -22,9 +22,9 @@
 <mat-sidenav-container>
   <mat-sidenav [(opened)]="opened" mode="side">
     <mat-nav-list>
-      <a mat-list-item href="#">Liste des devoirs</a>
-      <a mat-list-item href="#">Ajout d'un devoir</a>
-      <a mat-list-item href="#">Modification d'un devoir</a>
+      <a mat-list-item href="home">Liste des devoirs</a>
+      <a mat-list-item (click)="populate()">Peupler la base de données</a>
+      <a mat-list-item (click)="reset()" >Réinitialiser la base de données</a>
       <a mat-list-item href="#">Suppression d'un devoir</a>
       <a mat-list-item href="#">Génération de données de test</a>
     </mat-nav-list>
