--- a/assignment-app/src/app/assignments/dashboard/dashboard.component.html
+++ b/assignment-app/src/app/assignments/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content *ngFor="let a of assigmentsPourLaSemaine">
-            <mat-card>
+            <mat-card [routerLink]="['/assignment', a._id]">
                 <mat-card-header>
                     <mat-card-title>
                         <div>{{a.nom}}</div>
@@ -60,7 +60,7 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content *ngFor="let a of assigmentsPourLeMois">
-            <mat-card>
+            <mat-card [routerLink]="['/assignment', a._id]">
                 <mat-card-header>
                     <mat-card-title>
                         <div>{{a.nom}}</div>
